Fixed up card layout, alignment and sizing for dekstop and mobile views. Fixed up GM card to be centered. Added hover feature on one-card components. Added optional hover pseudo-override if no text for one-card. Added 2 new profile pics.

--- a/src/app/[locale]/styles/globals.scss
+++ b/src/app/[locale]/styles/globals.scss
@@ -120,3 +120,8 @@ h3 {
 table {
   width: 100%;
 }
+
+ol {
+  list-style-position: inside;
+  padding-left: 1em;
+}
