--- a/src/app/[locale]/styles/partials/instructors.scss
+++ b/src/app/[locale]/styles/partials/instructors.scss
@@ -1,8 +1,13 @@
 .card-grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+
+  // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem;
-  justify-items: center;
+
+  .card-grid-container:last-child {
+    grid-column: auto;
+  }
 
   @media screen and (min-width: $tablet) {
     grid-template-columns: repeat(5, 1fr);
@@ -10,8 +15,12 @@
 }
 
 .centerCard {
-  width: 40%;
+  width: 60%;
   margin: 0 auto;
+
+  @media screen and (min-width: $tablet) {
+    width: 40%;
+  }
 }
 
 .roundedImage {
